--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,71 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+//lists of the color options that are separate by warm and cool tones
+var warmColors = ["Orange", "Red", "Yellow", "Pink"];
+var coolColors = ["Blue", "Green", "Purple", "Lime Green"];
+//list of all the color images
+var colorImages = ["naples-yellow-painted-swatch.jpg", "Orange.png", "red.png", "blue.png", "purple.jpg", "green.png", "pink.jpg", "lime.jpg"];
+var colorOne = "";
+var colorTwo = "";
+var response = "";
+//When the check button is clicked the colors and 
+//response will be displayed
+onEvent("checkButton", "click", function( ) {
+  updateScreen(colorOne, colorTwo);
+});
+//this left dropdown is colorOne and the warm colors
+onEvent("leftDropdown", "change", function( ) {
+  colorOne = getText("leftDropdown");
+  setProperty("answerOutput", "text", "");
+});
+//this right dropdown is colorTwo and the cool colors
+onEvent("rightDropdown", "change", function( ) {
+  colorTwo = getText("rightDropdown");
+  setProperty("answerOutput", "text", "");
+});
+//updateScreen updates the color images to the users choice 
+//it also updates the response
+//one {string}- the color that the user chose from the left dropdown 
+//two {string}- the color that the user chose from the right dropdown
+function updateScreen(one, two) {
+  if (one == "Yellow") {
+    setProperty("leftColor", "image", colorImages[0]);
+  } else if ((one == "Orange")) {
+    setProperty("leftColor", "image", colorImages[1]);
+  } else if ((one == "Red")) {
+    setProperty("leftColor", "image", colorImages[2]);
+  } else if ((one == "Pink")) {
+    setProperty("leftColor", "image", colorImages[6]);
+  } else if (one == "Pick Color") {
+    setProperty("leftColor", "image", "icon://fa-question-circle");
+  }
+  if (two == "Blue") {
+    setProperty("rightColor", "image", colorImages[3]);
+  } else if ((two == "Purple")) {
+    setProperty("rightColor", "image", colorImages[4]);
+  } else if ((two == "Green")) {
+    setProperty("rightColor", "image", colorImages[5]);
+  } else if (two == "Lime Green") {
+    setProperty("rightColor", "image", colorImages[7]);
+  } else if (two == "Pick Color") {
+    setProperty("rightColor", "image", "icon://fa-question-circle");
+  }
+  setProperty("answerOutput", "text", "");
+  setText("answerOutput", decideAnswer(colorOne, colorTwo));
+  console.log(decideAnswer(colorOne, colorTwo));
+}
+//decideAnswer will take the choices that the user chose and
+//then decide wheather the colors are a perfect match or if they should try again
+//warm {string}- the color that the user chose from the left dropdown 
+//cold {string}- the color that the user chose from the right dropdown
+function decideAnswer(warm, cold) {
+  colorOne = getText("leftDropdown");
+  colorTwo = getText("rightDropdown");
+  response = getText("answerOutput");
+  for (var i = 0; i < coolColors.length; i++) {
+    if (warm == warmColors[i] && cold == coolColors[i]) {
+      response = "Perfect Match!:)";
+    }
+  }
+  if (response != "Perfect Match!:)") {
+    response = "Try again :(";
+  }
+  return response;
